src/main/java/com/example/Projectwarehouse/errors/ProductNotFoundException.java
package com.example.Projectwarehouse.errors;

public class ProductNotFoundException extends RuntimeException {
    public ProductNotFoundException(Long id) {
        super("Could not find product which id = " + id);
    }
}
